--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Whale Momentum</title>
     </head>
     <body>
-
+        <h1 id="title"> Grab me!</h1>
         <script src="app.js"></script>
     </body>
 </html>
