--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
         <title>Whale Momentum</title>
     </head>
     <body>
-        <h1 id="title" class="hello"> Grab me!</h1>
+        <div class="hello">
+            <h1>Grab Me !!</h1>
+        </div>
         <script src="app.js"></script>
     </body>
 </html>
