--- a/index.html
+++ b/index.html
@@ -9,13 +9,7 @@
     </head>
     <body>
         <div class="hello">
-            <h1>Grab Me1 !!</h1>
-        </div>
-        <div class="hello">
-            <h1>Grab Me2 !!</h1>
-        </div>
-        <div class="hello">
-            <h1>Grab Me3 !!</h1>
+            <h1>Grab Me !!</h1>
         </div>
         <script src="app.js"></script>
     </body>
