--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="hello">
-            <h1>Click Me !!</h1>
+            <h1 class = "sexy-font">Click Me !!</h1>
         </div>
         <script src="app.js"></script>
     </body>
