--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
         <title>Whale Momentum</title>
     </head>
     <body>
-        <div class="hello">
-            <h1 class = "sexy-font">Click Me !!</h1>
+        <div id="login-form">
+            <input type="text" placeholder="What is your name?"/>
+            <button>Log In</button>
         </div>
+        
         <script src="app.js"></script>
     </body>
 </html>
