--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     </head>
     <body>
         <div id="login-form">
-            <input type="text" placeholder="What is your name?"/>
+            <input type="text" placeholder="이름을 입력하세요"/>
             <button>Log In</button>
         </div>
-        
+
         <script src="app.js"></script>
     </body>
 </html>
