--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <title>Whale Momentum</title>
     </head>
     <body>
-        <div id="login-form">
-            <input type="text" placeholder="이름을 입력하세요"/>
-            <button>Log In</button>
-        </div>
+        <form id="login-form">
+            <input required maxlength="15" type="text" placeholder="이름을 입력하세요"/>
+            <input type="submit" value="Log In"/>
+        </form>
 
         <script src="app.js"></script>
     </body>
