--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <input required maxlength="15" type="text" placeholder="이름을 입력하세요"/>
             <input type="submit" value="Log In"/>
         </form>
-
+        <h1 id="greeting" class="hidden"></h1>
         <script src="app.js"></script>
     </body>
 </html>
