--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Whale Momentum</title>
     </head>
     <body>
-        <form id="login-form">
+        <form class="hidden" id="login-form">
             <input required maxlength="15" type="text" placeholder="이름을 입력하세요"/>
             <input type="submit" value="Log In"/>
         </form>
