--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
         <title>Whale Momentum</title>
     </head>
     <body>
@@ -13,6 +13,6 @@
             <input type="submit" value="Log In"/>
         </form>
         <h1 id="greeting" class="hidden"></h1>
-        <script src="app.js"></script>
+        <script src="js/greeting.js"></script>
     </body>
 </html>
