--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             <input type="submit" value="Log In"/>
         </form>
         <h1 id="greeting" class="hidden"></h1>
+        <h2 id="clock"></h2>
         <script src="js/greeting.js"></script>
+        <script src="js/clock.js"></script>
     </body>
 </html>
