--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         </form>
         <h1 id="greeting" class="hidden"></h1>
         <h2 id="clock"></h2>
+        <button></button>
         <script src="js/greeting.js"></script>
         <script src="js/clock.js"></script>
     </body>
