--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <h1 id="greeting" class="hidden"></h1>
         <h2 id="clock"></h2>
         <button></button>
+        <button></button>
         <script src="js/greeting.js"></script>
         <script src="js/clock.js"></script>
     </body>
