--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
             <input required maxlength="15" type="text" placeholder="이름을 입력하세요"/>
             <input type="submit" value="Log In"/>
         </form>
-        <h1 id="greeting" class="hidden"></h1>
         <h2 id="clock"></h2>
+        <h1 id="greeting" class="hidden"></h1>
+        <div id="quote">
+            <span></span>
+            <span></span>
+        </div>
         <script src="js/greeting.js"></script>
         <script src="js/clock.js"></script>
+        <script src="js/quotes.js"></script>
     </body>
 </html>
