--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         </form>
         <h2 id="clock"></h2>
         <h1 id="greeting" class="hidden"></h1>
+        <form id="todo-form">
+            <input type="text" placeholder="할 일을 입력하세요">
+        </form>
+        <ul id="todo-list"></ul>
         <div id="quote">
             <span></span>
             <span></span>
@@ -22,5 +26,6 @@
         <script src="js/clock.js"></script>
         <script src="js/quotes.js"></script>
         <script src="js/background.js"></script>
+        <script src="js/todo.js"></script>
     </body>
 </html>
