--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <span></span>
             <span></span>
         </div>
+        <div class="bgdiv"></div>
         <script src="js/greeting.js"></script>
         <script src="js/clock.js"></script>
         <script src="js/quotes.js"></script>
