--- a/index.html
+++ b/index.html
@@ -8,21 +8,23 @@
         <title>Whale Momentum</title>
     </head>
     <body>
-        <form class="hidden" id="login-form">
-            <input required maxlength="15" type="text" placeholder="이름을 입력하세요"/>
-            <input type="submit" value="Log In"/>
-        </form>
-        <h2 id="clock"></h2>
-        <h1 id="greeting" class="hidden"></h1>
-        <form id="todo-form">
-            <input type="text" placeholder="할 일을 입력하세요">
-        </form>
-        <ul id="todo-list"></ul>
-        <div id="quote">
-            <span></span>
-            <span></span>
+        <div class="viewport">    
+            <form class="hidden" id="login-form">
+                <input required maxlength="15" type="text" placeholder="이름을 입력하세요"/>
+                <input type="submit" value="Log In"/>
+            </form>
+            <h2 id="clock"></h2>
+            <h1 id="greeting" class="hidden"></h1>
+            <form id="todo-form">
+                <input type="text" placeholder="할 일을 입력하세요">
+            </form>
+            <ul id="todo-list"></ul>
+            <div id="quote">
+                <span></span>
+                <span></span>
+            </div>
         </div>
-        <div class="bgdiv"></div>
+            <div class="bgdiv"></div>
         <script src="js/greeting.js"></script>
         <script src="js/clock.js"></script>
         <script src="js/quotes.js"></script>
