--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
                 <input required maxlength="15" type="text" placeholder="이름을 입력하세요"/>
                 <input type="submit" value="Log In"/>
             </form>
-            <h2 id="clock"></h2>
-            <h1 id="greeting" class="hidden"></h1>
+            <div id="greeting" class="hidden"></div>
+            <div id="clock"></div>
             <form id="todo-form">
                 <input type="text" placeholder="할 일을 입력하세요">
             </form>
@@ -22,6 +22,9 @@
             <div id="quote">
                 <span></span>
                 <span></span>
+            </div>
+            <div class="searchbox">
+                <input class="search" type="text" placeholder="검색어를 입력하세요">
             </div>
         </div>
             <div class="bgdiv"></div>
