--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
                 <span></span>
                 <span></span>
             </div>
-            <div class="searchbox">
-                <input class="search" type="text" placeholder="검색어를 입력하세요">
-            </div>
+                <div class="searchbox">
+                    <a href="https://www.google.co.kr/">
+                        <img src="img/glogo.png" alt="#">
+                    </a>
+                    <input class="search" autocomplete="off" type="text" placeholder="검색어를 입력하세요">
+                </div>
         </div>
             <div class="bgdiv"></div>
         <script src="js/greeting.js"></script>
@@ -33,5 +36,6 @@
         <script src="js/quotes.js"></script>
         <script src="js/background.js"></script>
         <script src="js/todo.js"></script>
+        <script src="js/search.js"></script>
     </body>
 </html>
