--- a/index.html
+++ b/index.html
@@ -26,10 +26,15 @@
                     <a href="https://www.google.co.kr/">
                         <img src="img/glogo.png" alt="#">
                     </a>
-                    <input class="search" autocomplete="off" type="text" placeholder="검색어를 입력하세요">
+                    <input class="search" spellcheck="false" autocomplete="off" type="text" placeholder="검색어를 입력하세요">
                 </div>
         </div>
             <div class="bgdiv"></div>
+        <div class="gitbox">
+            <a href="https://github.com/bb8dd">
+                <img src="img/git.png" alt="">
+            </a>
+        </div>
         <script src="js/greeting.js"></script>
         <script src="js/clock.js"></script>
         <script src="js/quotes.js"></script>
