--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
         <script src="js/background.js"></script>
         <script src="js/todo.js"></script>
         <script src="js/search.js"></script>
+        <script src="js/git.js"></script>
     </body>
 </html>
