--- a/index.html
+++ b/index.html
@@ -22,12 +22,16 @@
                 <span></span>
                 <span></span>
             </div>
-                <div class="searchbox">
-                    <a href="https://www.google.co.kr/">
-                        <img src="img/glogo.png" alt="#">
-                    </a>
-                    <input class="search" spellcheck="false" autocomplete="off" type="text" placeholder="검색어를 입력하세요">
-                </div>
+            <div class="searchbox">
+                <a href="https://www.google.co.kr/">
+                    <img src="img/glogo.png" alt="#">
+                </a>
+                <input class="search" spellcheck="false" autocomplete="off" type="text" placeholder="검색어를 입력하세요">
+            </div>
+            <div class="slidebtn">
+                <button></button>
+                <button></button>
+            </div>
         </div>
             <div class="bgdiv"></div>
         <div class="gitbox">
