fetch, weather.js

--- a/index.html
+++ b/index.html
@@ -45,5 +45,6 @@
         <script src="js/background.js"></script>
         <script src="js/todo.js"></script>
         <script src="js/search.js"></script>
+        <script src="js/weather.js"></script>
     </body>
 </html>
