clock, greeting module /

--- a/index.html
+++ b/index.html
@@ -15,17 +15,7 @@
                 </a>
                 <input class="search" spellcheck="false" autocomplete="off" type="text" placeholder="검색어를 입력하세요">
             </div>
-            <div id="slide_div1">
-                <div id="clock"></div>
-                <form class="hidden" id="login-form">
-                    <input required maxlength="15" type="text" placeholder="이름을 입력하세요"/>
-                </form>
-                <div id="greeting" class="hidden"></div>
-                <form id="todo-form">
-                    <input type="text" placeholder="할 일을 입력하세요">
-                </form>
-                <ul id="todo-list"></ul>
-            </div>
+            <div id="slide_div1"></div>
             <div class="slidebtn">
                 <button class="page1"></button>
                 <button class="page2"></button>
@@ -41,7 +31,6 @@
                 <img src="img/git.png" alt="">
             </a>
         </div>
-        <script src="js/slide.js"></script>
         <script src="js/greeting.js"></script>
         <script src="js/clock.js"></script>
         <script src="js/quotes.js"></script>
@@ -49,5 +38,6 @@
         <script src="js/todo.js"></script>
         <script src="js/search.js"></script>
         <script src="js/weather.js"></script>
+        <script src="js/slide.js"></script>
     </body>
 </html>
