--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 </a>
                 <input class="search" spellcheck="false" autocomplete="off" type="text" placeholder="검색어를 입력하세요">
             </div>
-            <div id="slide_div1"></div>
+            <div id="slide_div"></div>
             <div class="slidebtn">
                 <button class="page1"></button>
                 <button class="page2"></button>
