--- a/index.html
+++ b/index.html
@@ -62,13 +62,17 @@
                 <div class="pop-content"></div>
             </div>
         </div>
-        <script type="module" src="dist/Greeting.js"></script>
-        <script type="module" src="dist/Clock.js"></script>
-        <script type="module" src="dist/Quotes.js"></script>
-        <script type="module" src="dist/BackGround.js"></script>
-        <script type="module" src="dist/Todo.js"></script>
-        <script type="module" src="dist/Search.js"></script>
-        <script type="module" src="dist/ViewportSub.js"></script>
-        <script type="module" src="dist/Slide.js"></script>
+        <!-- setup tsc -->
+        <script type="module" src="./src/main.js" ></script>
+
+        <!-- Vanilla JS -->
+        <!-- <script src="js/greeting.js"></script>
+        <script src="js/clock.js"></script>
+        <script src="js/quotes.js"></script>
+        <script src="js/background.js"></script>
+        <script src="js/todo.js"></script>
+        <script src="js/search.js"></script>
+        <script src="js/viewport-sub.js"></script>
+        <script src="js/slide.js"></script> -->
     </body>
 </html>
