--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
         </div>
         <!-- setup tsc -->
-        <script type="module" src="./src/main.js" ></script>
+        <script type="module" src="dist/main.js" ></script>
 
         <!-- Vanilla JS -->
         <!-- <script src="js/greeting.js"></script>
